--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.11.00"
+numberpicker = "1.0.3"
 uiTextGoogleFonts = "1.7.5"
 composeNavigation = "2.8.4"
 serialization = "1.6.3"
@@ -43,6 +44,7 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx"
 androidx-room-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomKtx" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomKtx" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+numberpicker = { module = "com.chargemap.compose:numberpicker", version.ref = "numberpicker" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
